--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,5 +26,5 @@ jobs:
           ksu-version: main
           android-version: 15
           aosp-clang-version: r547379
-          disable-lto: false
+          disable-lto: true
           anykernel3: true
